--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -341,7 +341,7 @@ h6 {
     padding: 10px 0;
     margin: 0;
     border-radius: 6px;
-    background-color: var(--nav-mobile-background-color);
+    /* background-color: var(--nav-mobile-background-color); */
     border: 1px solid color-mix(in srgb, var(--default-color), transparent 90%);
     box-shadow: none;
     overflow-y: auto;
@@ -351,7 +351,8 @@ h6 {
 
   .navmenu a,
   .navmenu a:focus {
-    color: var(--nav-dropdown-color);
+    /* color: var(--nav-dropdown-color); */
+    color: #ffffff;
     padding: 10px 20px;
     font-family: var(--nav-font);
     font-size: 17px;
