--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1001,7 +1001,8 @@ section,
 
 .about .read-more {
   background: var(--accent-color);
-  color: var(--contrast-color);
+  /* color: var(--contrast-color); */
+  color: #ffffff;
   font-family: var(--heading-font);
   font-weight: 500;
   font-size: 16px;
